--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
     "start": "NODE_ENV=production forever server.js",
     "deploy": "now && now alias",
     "dev": "nodemon server"
@@ -16,6 +17,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "forever": "^0.15.3",
+    "jshint": "^2.10.2",
     "mongoose": "^5.4.1",
     "nodemailer": "^5.0.0"
   },
